[gd_scene load_steps=20 format=2]

[ext_resource path="res://GridGame/Result.gd" type="Script" id=1]
[ext_resource path="res://parallax-mountain-bg.png" type="Texture" id=2]
[ext_resource path="res://Screenshot_2019-10-23 Color Converter(6).png" type="Texture" id=3]
[ext_resource path="res://parallax-mountain-montain-far.png" type="Texture" id=4]
[ext_resource path="res://parallax-mountain-mountains.png" type="Texture" id=5]
[ext_resource path="res://parallax-mountain-trees.png" type="Texture" id=6]
[ext_resource path="res://parallax-mountain-foreground-trees.png" type="Texture" id=7]
[ext_resource path="res://join_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://GridGame/Trun_statusFont.tres" type="DynamicFont" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.231373, 0.176471, 0.27451, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.811765, 0.4, 0.858824, 1 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.811765, 0.4, 0.858824, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.556863, 0.427451, 0.556863, 1 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.811765, 0.4, 0.858824, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.52549, 0.384314, 0.52549, 1 )
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.811765, 0.4, 0.858824, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Result" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 0, 0.773781 )
scale = Vector2( 2.9579, 2.66531 )
texture = ExtResource( 2 )
centered = false

[node name="Screenshot_2019-10-23 Color Converter(6)" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 404.918, 603.173 )
scale = Vector2( 4.5623, 2.5651 )
texture = ExtResource( 3 )

[node name="parallax-mountain-montain-far" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 491.907, 585.279 )
scale = Vector2( 1.08127, 1.14474 )
texture = ExtResource( 4 )

[node name="parallax-mountain-mountains" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 271.381, 627.384 )
texture = ExtResource( 5 )

[node name="parallax-mountain-mountains2" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 531.381, 627.384 )
texture = ExtResource( 5 )

[node name="parallax-mountain-trees" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 401.381, 596.331 )
scale = Vector2( 1.47407, 2.54605 )
texture = ExtResource( 6 )

[node name="parallax-mountain-foreground-trees" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 397.166, 575.434 )
scale = Vector2( 1.47407, 2.54605 )
texture = ExtResource( 7 )

[node name="Result" type="Panel" parent="."]
margin_left = 240.0
margin_top = 170.0
margin_right = 560.0
margin_bottom = 560.0
custom_styles/panel = SubResource( 1 )

[node name="scoreDisplay" type="Panel" parent="Result"]
margin_left = 50.0
margin_top = 30.0
margin_right = 270.0
margin_bottom = 191.0
custom_styles/panel = SubResource( 2 )

[node name="score_1" type="Label" parent="Result/scoreDisplay"]
margin_top = 20.0
margin_right = 220.0
margin_bottom = 60.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 8 )
text = "Score 1"
align = 1
valign = 1

[node name="score_2" type="Label" parent="Result/scoreDisplay"]
margin_top = 90.0
margin_right = 220.0
margin_bottom = 130.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 8 )
text = "Score 2"
align = 1
valign = 1

[node name="restartButton" type="Button" parent="Result"]
margin_left = 20.0
margin_top = 330.0
margin_right = 138.0
margin_bottom = 360.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color_hover = Color( 0.811765, 0.4, 0.858824, 1 )
text = "Continue"

[node name="quitButton" type="Button" parent="Result"]
margin_left = 180.0
margin_top = 330.0
margin_right = 298.0
margin_bottom = 360.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color_hover = Color( 0.811765, 0.4, 0.858824, 1 )
text = "Quit"
[connection signal="pressed" from="Result/restartButton" to="." method="_on_restartButton_pressed"]
[connection signal="pressed" from="Result/quitButton" to="." method="_on_quitButton_pressed"]
